; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/win32/extr_syslog.c_NTReportError.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/win32/extr_syslog.c_NTReportError.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EVENTLOG_ERROR_TYPE = common dso_local global i32 0, align 4
@BIND_ERR_MSG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @NTReportError(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca [1 x i8*], align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32* null, i32** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = getelementptr inbounds [1 x i8*], [1 x i8*]* %6, i64 0, i64 0
  store i8* %7, i8** %8, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = call i32* @RegisterEventSource(i32* null, i8* %9)
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* @EVENTLOG_ERROR_TYPE, align 4
  %13 = load i32, i32* @BIND_ERR_MSG, align 4
  %14 = getelementptr inbounds [1 x i8*], [1 x i8*]* %6, i64 0, i64 0
  %15 = call i32 @ReportEvent(i32* %11, i32 %12, i32 0, i32 %13, i32* null, i32 1, i32 0, i8** %14, i32* null)
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @DeregisterEventSource(i32* %16)
  ret void
}

declare dso_local i32* @RegisterEventSource(i32*, i8*) #1

declare dso_local i32 @ReportEvent(i32*, i32, i32, i32, i32*, i32, i32, i8**, i32*) #1

declare dso_local i32 @DeregisterEventSource(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
